Ejecucion en paralelo
Se modifica el POM para realizar ejecucion en paralelo de los escenarios

* Para poder ejecutar en paralelo es necesario realizarlo por comandos de maven los
cuales serian

mvn clean verify

*Para tener en cuenta de esta manera es como ejecuta jenkins los scenarios